--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/index.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Furama Resort</title>
     <th:block th:replace="/common/layout.html :: style"></th:block>
+    <style>
+        .column.middle {
+            font-size: medium;
+            font-weight: bolder;
+            color: #ff4000;
+            background-image: url(/images/girl-with-pink-hat.jpg);
+            background-size: 100% 100%;
+            /*background-position: center;*/
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
 <div class="header" th:replace="/common/layout.html :: header"></div>
@@ -16,16 +27,13 @@
     <div class="column side" th:replace="/common/layout.html :: column-left"></div>
     <div class="column middle">
         <h3>Welcome to Furama Resort</h3><br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor, illo quisquam repellat ut
-            voluptatum?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
         <p>A consectetur, eligendi esse neque nihil nisi nostrum, perferendis quos ratione sequi sint veritatis
             voluptate!</p>
         <p>Ad, alias asperiores, autem, distinctio eius necessitatibus nobis numquam perferendis quaerat quibusdam rem
             tempora ut.</p>
         <p>Amet dolorem facilis labore provident suscipit tempore velit voluptas, voluptatem! Expedita odio tempore
             voluptate. Explicabo.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nostrum pariatur perspiciatis tempore! Ad,
-            aperiam beatae dignissimos nobis repudiandae voluptate.</p>
         <p>Accusantium atque deserunt fuga harum illum inventore iusto minus natus omnis perspiciatis quaerat repellat
             reprehenderit tenetur, ullam unde veniam, voluptate?</p>
         <p>Asperiores impedit perspiciatis quo voluptate. Asperiores aut error incidunt temporibus voluptate? Aperiam et
@@ -33,12 +41,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa illo in itaque?</p>
         <p>Deleniti dolorum incidunt inventore, iusto necessitatibus odit officia possimus recusandae tenetur
             voluptate!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto atque, corporis cupiditate
-            exercitationem expedita id ipsa molestias nam saepe veritatis.</p>
+        <p>Alias facere impedit nostrum quae veniam vitae?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae commodi consectetur corporis dicta
             doloremque eius, illum obcaecati officiis quaerat quam quas, quibusdam quod repellat repudiandae sit sunt
             totam veniam?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi debitis enim exercitationem fugiat,
+            quod ut voluptatibus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, quos?</p>
 
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
