--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/list.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/list.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Customer List</title>
     <th:block th:replace="/common/layout.html :: style"></th:block>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+
+        table, th, td {
+            border: 1px solid black;
+            padding: 2px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <div class="header" th:replace="/common/layout.html :: header"></div>
@@ -15,10 +29,53 @@
 <div class="row">
     <div class="column side" th:replace="/common/layout.html :: column-left"></div>
     <div class="column middle">
-        <h3>Customer List</h3><br>
-
+        <form th:action="@{add-customer}" th:object="${customerList}" method="post">
+            <fieldset data-th-align="center" style="width: 350px; border: 0; margin: auto">
+                <legend><strong>Customer list</strong></legend>
+                <span th:text="${message}" style="color: limegreen"></span><br>
+                <table style="text-align:left;">
+                    <tr style="text-align: center">
+                        <th>No.</th>
+                        <th>ID</th>
+                        <th>Type</th>
+                        <th style="width: 300px">Full name</th>
+                        <th>Date of birth</th>
+                        <th>Identity number</th>
+                        <th>Phone number</th>
+                        <th>Email</th>
+                        <th>Address</th>
+                        <th><i>Edit</i></th>
+                        <th><i>Remove</i></th>
+                    </tr>
+                    <th:block th:each="customer, iter : ${customerList}">
+                        <tr style="text-align: center">
+                            <td th:text="${(iter.index + 1) + customerList.size * customerList.number}"></td>
+                            <td th:text="${customer.id}"></td>
+                            <td th:text="${customerTypeService.findById(customer.customerTypeId).customerTypeName}"></td>
+                            <td th:text="${customer.fullName}"></td>
+                            <td th:text="${customer.dateOfBirth}"></td>
+                            <td th:text="${customer.identityNumber}"></td>
+                            <td th:text="${customer.phoneNumber}"></td>
+                            <td th:text="${customer.email}"></td>
+                            <td th:text="${customer.address}"></td>
+                            <td><a th:href="@{/edit-customer/__${customer.id}__}">edit</a></td>
+                            <td><a th:href="@{/remove-customer/__${customer.id}__}">remove</a></td>
+                        </tr>
+                    </th:block>
+                </table>
+            </fieldset>
+        </form>
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
+</div>
+<div style="text-align: center">
+    <th:block th:if="${customerList.totalPages != 0}">
+        <a th:href="@{'/list-customer'(page=${customerList.number - 1})}"
+           th:if="${customerList.hasPrevious()}">&lt;&lt;&nbsp;Previous</a>
+        <span th:text="${customerList.number + 1}"></span> / <span th:text="${customerList.totalPages}"></span>
+        <a th:href="@{'/list-customer'(page=${customerList.number + 1})}"
+           th:if="${customerList.hasNext()}">Next&nbsp;&gt;&gt;</a>
+    </th:block>
 </div>
 </body>
 <div class="footer" th:replace="/common/layout.html :: footer"></div>
