--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
@@ -14,8 +14,8 @@
 <body>
 
 <div class="header" th:fragment="header">
-    <h1>Furama Resort Danang</h1>
-    <h3>A Culinary Beach Resort In Vietnam</h3>
+    <h1 style="color: #ff1a1a">Furama Resort Danang</h1>
+    <h3 style="color: #ff751a"><i>A Culinary Beach Resort In Vietnam</i></h3>
     <div class="logo">
         <img src="/images/furama-logo.png" alt="Error" width="50">
     </div>
