--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/add.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/add.html
@@ -22,7 +22,8 @@
                 <table style="text-align:left;">
                     <tr>
                         <td>
-                            <label for="customer-type"><strong>Customer Type:<span style="color: red">*</span></strong></label>
+                            <label for="customer-type"><strong>Customer Type:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -36,7 +37,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-full-name"><strong>Full name:<span style="color: red">*</span></strong></label>
+                            <label for="customer-full-name"><strong>Full name:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -46,7 +48,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-date-of-birth"><strong>Date of birth:<span style="color: red">*</span></strong></label>
+                            <label for="customer-date-of-birth"><strong>Date of birth:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -56,7 +59,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-identity-number"><strong>Identity number:<span style="color: red">*</span></strong></label>
+                            <label for="customer-identity-number"><strong>Identity number:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -66,7 +70,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-phone-number"><strong>Phone number:<span style="color: red">*</span></strong></label>
+                            <label for="customer-phone-number"><strong>Phone number:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -76,7 +81,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-email"><strong>Email:<span style="color: red">*</span></strong></label>
+                            <label for="customer-email"><strong>Email:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
@@ -86,7 +92,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="customer-address"><strong>Address:<span style="color: red">*</span></strong></label>
+                            <label for="customer-address"><strong>Address:
+                                <span style="color: red">*</span></strong></label>
                             <br><br>
                         </td>
                         <td>
