--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/edit.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/edit.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Edit Customer</title>
     <th:block th:replace="/common/layout.html :: style"></th:block>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <div class="header" th:replace="/common/layout.html :: header"></div>
@@ -106,6 +111,8 @@
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                 <input type="submit" value="Edit Customer"/>
             </fieldset>
+            <br>
+            <a href="/list-customer"><< Back to customer list</a>
         </form>
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
