--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
@@ -66,9 +66,8 @@
             <li><a href="#">Service</a>
                 <ul>
                     <li><a href="/add-service">Add new</a></li>
-                    <li><a href="#">View list</a></li>
-                    <li><a href="#">Edit</a></li>
-                    <li><a href="#">Remove</a></li>
+                    <li><a href="/list-service">View list</a></li>
+                    <li><a href="/search-service">Search</a></li>
                 </ul>
             </li>
         </ul>
