--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/list.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/list.html
@@ -29,7 +29,7 @@
 <div class="row">
     <div class="column side" th:replace="/common/layout.html :: column-left"></div>
     <div class="column middle">
-        <form th:action="@{add-customer}" th:object="${customerList}" method="post">
+        <form th:object="${customerList}">
             <fieldset data-th-align="center" style="width: 350px; border: 0; margin: auto">
                 <legend><strong>Customer list</strong></legend>
                 <span th:text="${message}" style="color: limegreen"></span><br>
