--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/common/layout.html
@@ -37,6 +37,7 @@
                     <li><a href="/add-customer">Add new</a></li>
                     <li><a href="/list-customer">View list</a></li>
                     <li><a href="/search-customer">Search</a></li>
+                    <li><a href="/current-customer">Current</a></li>
                 </ul>
             </li>
             <li><a href="#">Contract</a>
