--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/add.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/customer/add.html
@@ -105,6 +105,7 @@
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                 <input type="submit" value="Add Customer"/>
             </fieldset>
+            <a href="/list-customer"><< View customer list</a>
         </form>
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
