--- a/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/service/add.html
+++ b/Module2/CaseStudy_Java_Spring_MVC/furama_spring_mvc/src/main/resources/templates/service/add.html
@@ -117,6 +117,7 @@
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
                 <input type="submit" value="Add Service"/>
             </fieldset>
+            <a href="/list-service"><< View service list</a>
         </form>
     </div>
     <div class="column side" th:replace="/common/layout.html :: column-right"></div>
